# paddle-ocr

./: .gitignore  Cargo.toml
deployer/: Cargo.toml
deployer/src/: linux.rs  mac.rs  main.rs  win.rs
python-src/: bootloader.py  ppocr.py  requirements.txt
