[package]
name = "deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"          # For easy error handling
clap = { version = "4.4", features = ["derive"] } # CLI argument parsing
regex = "1.10"          # To parse strace logs
walkdir = "2"           # To walk directories if needed
fs_extra = "1.3"        # For copying folders easily
directories = "5.0"     # To find cache dirs (optional, but good practice)
